<resources>
    <string name="app_name">MangoBlogger</string>
    <string name="analytics_terms_title">Analytics Terms</string>
    <string name="ux_terms_title">UX Terms</string>
    <string name="about_title">MangoBlogger</string>
    <string name="contact_title">Contact Us</string>
    <string name="location_description">Our location</string>
    <string name="mail_description">Email Us</string>
    <string name="whatsapp_description">Whatsapp Us</string>
    <string name="facebook_description">Open our facebook page</string>
    <string name="insta_description">Open our Instagram page</string>
    <string name="youtube_description">Open our Youtube channel</string>
    <string name="twitter_description">Open our Twitter account</string>
    <string name="linkedin_description">Open our LinkedIn page</string>
    <string name="email"><u>contact@mangoblogger.com</u></string>
    <string name="phone">+1 315.751.8581</string>
    <string name="loaction"># 6, Khivansara Nagar, Post Bidkin,Tal. Paithan, Aurangabad, Maharashtra, 431105 India</string>
    <string name="about_us">MangoBlogger.com is a UX agency specializing in web analytics and SEO. We create useful Google Analytics Dashboards for your business using Google Tag Manager. Our dashabords integerate with AdWords conversion tracking, Retargetting, Facebook Pixel, Google Publisher and much more.</string>
    <string name="offline_notice">You are currently offline.</string>
    <string name="firebase_list">Firebase List</string>

    <string name="bookmarked_desc">If you see something you like, click on the bookmark icon to save it. All of your bookmarked article will appear here.</string>
    <string name="start_exploring_label">Start exploring</string>

    <string name="expand">More</string>
    <string name="collapse">Less</string>
    <string name="card_share_body_extra">\n \nFor more terms, install our app from \n https://play.google.com/store/apps/details?id=com.mangobloggerandroid.app</string>

    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Mangoblogger
a UX agency specializing web analytics and SEO</string>
    <string name="slide_1_desc">We work with startups in implementing robust web analytics solutions and train the team on how to use web analytics to drive growth decisions.</string>

    <string name="slide_2_title">We think big,
start small,
and move fast</string>
    <string name="slide_2_desc">We create custom Google Analytics Dashboards in order to track the KPIs which matter the most for your business.</string>

    <string name="slide_3_title">Our Work Our Craft</string>
    <string name="slide_3_desc">We take work seriously and practice our craft. We constantly push our own boundaries and set high standards for the work we produce.</string>

    <string name="slide_4_title">Our Vision</string>
    <string name="slide_4_desc">Bring the power of web analytics and SEO to small and medium-sized businesses and Simplify digital marketing by providing tools and analytics in a pay as you go mode</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="play_store_link">https://play.google.com/store/apps/details?id=com.mangobloggerandroid.app</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_sign_in_short_id">Register</string>
    <string name="email_id">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login_id">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in MangoBlogger now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="facebook_app_id">184881255401716</string>
    <string name="title_error_no_network">No Network</string>
    <string name="message_error_no_network">You must have a working internet connection!</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


</resources>
