<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingBottom="0dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="40dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/activity_vertical_margin"
                        android:text="About"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <View
                        android:id="@+id/view"
                        android:layout_width="match_parent"
                        android:layout_height="3dp"
                        android:background="@color/colorPrimaryDark"></View>

                    <TextView
                        android:id="@+id/about"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/activity_vertical_margin"
                        android:paddingLeft="@dimen/activity_vertical_margin"
                        android:paddingRight="@dimen/activity_vertical_margin"
                        android:paddingTop="20dp"
                        android:text="@string/about_us"
                        android:textSize="12sp" />


                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/activity_vertical_margin"
                        android:text="Contact Us"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="3dp"
                        android:background="@color/colorPrimaryDark"></View>

                    <LinearLayout
                        android:id="@+id/find_location"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:paddingBottom="@dimen/activity_vertical_margin"
                        android:paddingLeft="@dimen/activity_vertical_margin"
                        android:paddingRight="@dimen/activity_vertical_margin"
                        android:paddingTop="20dp">
                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            app:srcCompat="@mipmap/ic_location_on_black_36dp" />
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/loaction"
                            android:layout_weight="10"
                            android:paddingLeft="10dp"
                            android:layout_gravity="top"
                            android:textSize="12sp"
                            android:textStyle="bold"/>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/send_email"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:paddingBottom="@dimen/activity_vertical_margin"
                        android:paddingLeft="@dimen/activity_vertical_margin"
                        android:paddingRight="@dimen/activity_vertical_margin">
                        <ImageView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            app:srcCompat="@mipmap/ic_email_black_18dp" />
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="10"
                            android:layout_height="wrap_content"
                            android:text="@string/email"
                            android:layout_gravity="center_vertical"
                            android:paddingLeft="10dp"
                            android:textSize="12sp"
                            android:textStyle="bold"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:paddingBottom="@dimen/activity_vertical_margin"
                        android:paddingLeft="@dimen/activity_vertical_margin"
                        android:paddingRight="@dimen/activity_vertical_margin">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/ic_whatsapp" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="10"
                            android:layout_height="wrap_content"
                            android:text="@string/phone"
                            android:layout_gravity="center_vertical"
                            android:paddingLeft="10dp"
                            android:textSize="12sp"
                            android:textStyle="bold"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:paddingBottom="20dp">
                        <View
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="#ffffff"/>
                        <ImageView
                            android:id="@+id/facebook"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/ic_facebook" />
                        <ImageView
                            android:id="@+id/twitter"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/ic_action_name" />
                        <ImageView
                            android:id="@+id/linkedin"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/ic_linkedin" />
                        <ImageView
                            android:id="@+id/youtube"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/ic_youtube" />
                        <ImageView
                            android:id="@+id/insta"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/ic_instagram" />
                        <View
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="#ffffff"/>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>

    </ScrollView>

</RelativeLayout>